objects/Order_NorthAmer__e.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Order NorthAmer</label>
    <pluralLabel>Order NorthAmer</pluralLabel>
</CustomObject>